# Hypr-GlassWindow

./: .gitignore  CMakeLists.txt  README.md  build.sh  hyprpm.toml
include/: glasswindow.hpp
shaders/: glass.frag
src/: glasswindow.cpp  main.cpp
